@@ -258,6 +258,12 @@ Emulate a DISCiPLE interface. Same as the Disk Peripherals Options dialog's
 option.
 .RE
 .PP
+.B \-\-discipledisk
+.I file
+.RS
+Insert the specified file into the emulated DISCiPLE's drive\ 1.
+.RE
+.PP
 .B \-\-divide
 .RS
 Emulate the DivIDE interface. The same as the Disk Peripherals Options
